--- a/web/index.html
+++ b/web/index.html
@@ -24,13 +24,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Flutter Boilerplate">
+  <meta name="apple-mobile-web-app-title" content="BINTANGO Translate">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>Flutter Boilerplate</title>
+  <title>BINTANGO Translate</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
