--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,10 @@
 
   <title>BINTANGO Translate</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Google Adsense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8604906384604870"
+          crossorigin="anonymous"></script>
 </head>
 
 <body>
