--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>BINTANGO Translate</title>
+  <title>BINTANGO Translate | AIでインドネシア語翻訳と同時に一括単語検索</title>
   <link rel="manifest" href="manifest.json">
 
   <!-- Google Adsense -->
